# ftc-user-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9ab391020287_create_users_table.py  9dc82bc010d1_initial_migration.py
scripts/: api.sh
src/api/: app.py
src/api/v1/: auth.py  routes.py  users.py
src/api/v1/routes/: auth.py  users.py
src/core/: database.py  dependency_injection.py  security.py  settings.py
src/db/postgresql/: database.py
src/db/postgresql/interfaces/: user.py
src/db/postgresql/models/: user.py
src/models/: user.py
src/repositories/: user.py
src/schemas/: user.py
src/services/: auth_service.py  user_service.py
src/use_cases/: auth_service.py  user_service.py
terraform/: main.tf  provider.tf  variables.tf
terraform/modules/ecr/: output.tf
tests/: conftest.py
tests/unit/api/v1/: test_get_user.py  test_list_users.py
tests/unit/api/v1/users/: test_create_user.py  test_get_user.py  test_list_users.py  test_update_user.py
tests/unit/core/security/: test_decode_jwt.py  test_encode_jwt.py  test_hash_password.py  test_verify_jwt.py  test_verify_password.py
tests/unit/repositories/auth/: test_login.py
tests/unit/repositories/user/: test_add.py  test_list_users.py
tests/unit/services/user_service/: test_delete_user.py  test_get_by_email.py  test_is_user_authenticated.py
